--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -64,3 +64,10 @@
   font-weight: 400;
   color: #4285f4;
 }
+
+.pagination {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  float: right;
+  margin-right: 50px;
+}
