--- a/src/css/DetailsPage.css
+++ b/src/css/DetailsPage.css
@@ -8,3 +8,13 @@
   width: 250px;
   height: 300px;
 }
+
+.error {
+  display: flex;
+  margin-top: 200px;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 400;
+  color: #4285f4;
+}
